@@ -5,7 +5,8 @@ Remember to increase the TIGHTDB_JNI_VERSION in com_tightdb_internal_Util.cpp an
 
 19-November-2013:
 ================
-+ Added sort() to views in typed interface.
++ Added sort() to views in typed interface on bool, date and int columns.
++ Check for returning -1 on 32-bit machines, when e.g. column name not found.
 
 14-November-2013:
 ================
